Replaced pregnant lady

--- a/landing.html
+++ b/landing.html
@@ -13,7 +13,6 @@
         <br>
         <button class="signup" type="button">Sign Up</button>
 
-        <img src="images/plant.png" class="plant">
-        <img src="images/pregnantwomanrunning.png" class="woman">
+        <img src="images/yellowhoodie.png" class="yellowhoodie">
     </body>
 </html>
