updated and validated html code.

--- a/landing.html
+++ b/landing.html
@@ -13,6 +13,6 @@
         <br>
         <button class="signup" type="button">Sign Up</button>
 
-        <img src="images/yellowhoodie.png" class="yellowhoodie">
+        <img src="images/yellowhoodie.png" class="yellowhoodie" Alt="Yellow Hoodie">
     </body>
 </html>
