--- a/landing.html
+++ b/landing.html
@@ -13,6 +13,6 @@
         <br>
         <button class="signup" type="button">Sign Up</button>
 
-        <img src="images/yellowhoodie.png" class="yellowhoodie Alt="Yellow Hoodie">
+        <img src="images/yellowhoodie.png" class="yellowhoodie alt="Yellow Hoodie">
 </body>
 </html>
