end of class still in progress add-student page

--- a/add-student.html
+++ b/add-student.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" type="text/css" href="add-student.css"> 
     </head>
     <body>
-        <a href="#" class="cancel">Cancel</a>
+        <a href="#" class="cancel">Cancel <span class="save">Save</span></a>
         <h1 class="heading">Add a <span style="color: #f21a4c;">Student</span></h1>
 
     </body>
