finalized css on login page

--- a/add-student.html
+++ b/add-student.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Facial Recognition</title>
+        <title>Add a Student</title>
         <link rel="stylesheet" type="text/css" href="add-student.css"> 
     </head>
     <body>
