--- a/landing.html
+++ b/landing.html
@@ -9,7 +9,9 @@
     <body>
         <h1 class="heading">Automated<br>Attendance</h1>
 
+        <a href="login.html">
         <button class="login" type="button">Log In</button>
+        </a>
         <br>
         <button class="signup" type="button">Sign Up</button>
 
