--- a/login.html
+++ b/login.html
@@ -15,11 +15,13 @@
             <input type="text" class="form__input" id="name" placeholder="Username" required=""/>
             <label for="name" class="form__label">Username</label>
             <br>
-            <input type="text" class="form__input" id="name" placeholder="Password" required=""/>
+            <input type="password" class="form__input" id="name" placeholder="Password" required=""/>
             <label for="name" class="form__label">Password</label>
         </div>
 
         <button class="login" type="button">Log In</button>
+        <br>
+        <p>or</p>
         <br>
         <button class="signup" type="button">Sign Up</button>
     </body>
