added links to buttons

--- a/signup.html
+++ b/signup.html
@@ -22,11 +22,12 @@
             <label for="name" class="form__label">Password</label>
             <br>            
     </div>
-
+    <a href="signup.html">
     <button class="signup" type="button">Sign Up</button>
     <br>
     <p>or</p>
     <br>
+    <a href="login.html">
     <button class="login" type="button">Log In</button>
     </body>
 </html>
