updated signup button link

--- a/login.html
+++ b/login.html
@@ -23,6 +23,7 @@
         <br>
         <p>or</p>
         <br>
+        <a href="signup.html">
         <button class="signup" type="button">Sign Up</button>
     </body>
 </html>
