udpated signup button link

--- a/landing.html
+++ b/landing.html
@@ -13,6 +13,7 @@
         <button class="login" type="button">Log In</button>
         </a>
         <br>
+        <a href="signup.html">
         <button class="signup" type="button">Sign Up</button>
 
         <img src="images/yellowhoodie.png" class="yellowhoodie" alt="Yellow Hoodie">
