--- a/signup.html
+++ b/signup.html
@@ -9,24 +9,31 @@
         <link rel="stylesheet" type="text/css" href="signup.css">
     </head>
     <body>
+        <!--Back button on top left-->
         <a href="landing.html" class="link">Back</a>
-
+        
+        <!--Title-->
         <h1 class="heading">Sign Up</h1>
+            <!--Username box-->
             <input type="text" class="form__input" id="name" placeholder="Username" required=""/>
             <label for="name" class="form__label">Username</label>
             <br>
+            <!--Email box-->
             <input type="email" class="form__input" id="name" placeholder="Email" required=""/>
             <label for="name" class="form__label">Email</label>
             <br>
+            <!--Password box-->
             <input type="password" class="form__input" id="name" placeholder="Password" required=""/>
             <label for="name" class="form__label">Password</label>
             <br>            
     </div>
+    <!--Sign up button on bottom-->
     <a href="signup.html">
     <button class="signup" type="button">Sign Up</button>
     <br>
     <p>or</p>
     <br>
+    <!--Log in button on bottom-->
     <a href="login.html">
     <button class="login" type="button">Log In</button>
     </body>
