added comments to code

--- a/login.html
+++ b/login.html
@@ -7,22 +7,28 @@
         <link rel="stylesheet" type="text/css" href="login.css">
     </head>
     <body>
+        <!--Back button on top left-->
         <a href="landing.html" class="link">Back</a>
-
+        
+        <!--Title-->
         <h1 class="heading">Log In</h1>
 
         <div class="form__group">
+            <!--Username box-->
             <input type="text" class="form__input" id="name" placeholder="Username" required=""/>
             <label for="name" class="form__label">Username</label>
             <br>
+            <!--Password box-->
             <input type="password" class="form__input" id="name" placeholder="Password" required=""/>
             <label for="name" class="form__label">Password</label>
         </div>
-
+        
+        <!--Log in button on bottom-->
         <button class="login" type="button">Log In</button>
         <br>
         <p>or</p>
         <br>
+        <!--Sign up button on bottom-->
         <a href="signup.html">
         <button class="signup" type="button">Sign Up</button>
     </body>
