Fix errors and connect stylesheet with html

--- a/web-pages/select_class.html
+++ b/web-pages/select_class.html
@@ -2,7 +2,8 @@
 <html>
   <head lang="en">
     <meta charset="utf-8">
-    <title>Welcome, ___!</title> // add js file to fill in blanks
+    <title>Welcome, ___!</title> // add js file to fill in blanks</title>
+    <link rel="stylesheet" href="../css/select_class.css/">
   </head>
   <body>
     <div id="sign-out">Sign Out</div> // add js file for the sign out option
