Added search bar & progress on add-student

--- a/add-student.html
+++ b/add-student.html
@@ -9,6 +9,7 @@
     <body>
         <a href="#" class="cancel">Cancel <span class="save">Save</span></a>
         <h1 class="heading">Add a <span style="color: #f21a4c;">Student</span></h1>
-
+        <input type="text" class="searchDesign" id="searchBar" onkeyup="Search()" placeholder="Find a student"/> 
+        <div class="box"></div>
     </body>
 </html>
