Added search icon

--- a/add-student.html
+++ b/add-student.html
@@ -7,9 +7,10 @@
         <link rel="stylesheet" type="text/css" href="add-student.css"> 
     </head>
     <body>
-        <a href="#" class="cancel">Cancel <span class="save">Save</span></a>
+        <a href="new-class.html" class="cancel">Cancel <span class="save">Save</span></a>
         <h1 class="heading">Add a <span style="color: #f21a4c;">Student</span></h1>
-        <input type="text" class="searchDesign" id="searchBar" onkeyup="Search()" placeholder="Find a student"/> 
+        <input type="text" class="searchDesign" id="searchBar" onkeyup="Search()" placeholder="Find a student"/>
+        <img src="images/search-icon.png" alt="Search Icon" height="1%" width="1%" />
         <div class="box"></div>
     </body>
 </html>
