NEW landing page, cleaned out repo

--- a/landing.html
+++ b/landing.html
@@ -2,21 +2,32 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Facial Recognition</title>
-        <link rel="stylesheet" type="text/css" href="landing.css">
+        <meta name="viewport" content="width=device-width", initial-scale="1.0">
+        <title>Automated Attendance</title>
+        <link rel="stylesheet" href="landing.css" />
     </head>
     <body>
-        <h1 class="heading">Automated<br>Attendance</h1>
-
-        <a href="login.html">
-        <button class="login" type="button">Log In</button>
-        </a>
-        <br>
-        <a href="signup.html">
-        <button class="signup" type="button">Sign Up</button>
-        </a>
-
-        <img src="images/yellowhoodie.png" class="yellowhoodie" alt="Yellow Hoodie">
-</body>
+        <nav>
+            <div class="logo"><img src="images/autoattendlogo.png" class="logo-image"></div>
+            <div class="nav-items">
+                <a href="/">About</a>
+                <a href="/">Credits</a>
+                <a href="/">Log In</a>
+                <a href="/">Sign Up</a>
+            </div>
+        </nav>
+        <section class="hero">
+            <div class="hero-container">
+                <div class="column-left">
+                    <h1>Automated Attendance</h1>
+                    <h3>Attendance made easy</h3>
+                    <p>An independent study project by a <br>group of students at Allen High School</p>
+                    <button>Get Started</button>
+                </div>
+                <div class="column-right">
+                    <img src="images/yellowandtealblob.png" class="hero-image">
+                </div>
+            </div>
+        </section>
+    </body>
 </html>
