updated sign up page with new style

--- a/landing.html
+++ b/landing.html
@@ -13,7 +13,7 @@
                 <a href="/">About</a>
                 <a href="/">Credits</a>
                 <a href="/">Log In</a>
-                <a href="/">Sign Up</a>
+                <a href="signup.html">Sign Up</a>
             </div>
         </nav>
         <section class="hero">
@@ -22,7 +22,9 @@
                     <h1>Automated Attendance</h1>
                     <h3>Attendance made easy</h3>
                     <p>An independent study project by a <br>group of students at Allen High School</p>
+                    <a href="signup.html">
                     <button>Get Started</button>
+                    </a>
                 </div>
                 <div class="column-right">
                     <img src="images/yellowandtealblob.png" class="hero-image">
