--- a/signup.html
+++ b/signup.html
@@ -1,39 +1,43 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>
-            Sign Up
-        </title>
-        <link rel="stylesheet" type="text/css" href="signup.css">
-    </head>
-    <body>
-        <!--Back button on top left-->
-        <a href="landing.html" class="link">Back</a>
-        
-        <!--Title-->
-        <h1 class="heading">Sign Up</h1>
-            <!--Username box-->
-            <input type="text" class="form__input" id="name" placeholder="Username" required=""/>
-            <label for="name" class="form__label">Username</label>
-            <br>
-            <!--Email box-->
-            <input type="email" class="form__input" id="name" placeholder="Email" required=""/>
-            <label for="name" class="form__label">Email</label>
-            <br>
-            <!--Password box-->
-            <input type="password" class="form__input" id="name" placeholder="Password" required=""/>
-            <label for="name" class="form__label">Password</label>
-            <br>            
-    </div>
-    <!--Sign up button on bottom-->
-    <button class="signup" type="button">Sign Up</button>
-    <br>
-    <p>or</p>
-    <br>
-    <!--Log in button on bottom-->
-    <a href="login.html">
-    <button class="login" type="button">Log In</button>
-    </body>
-</html>
+    <!DOCTYPE html>
+    <html>
+        <head>
+            <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <title>
+                Sign Up
+            </title>
+            <link rel="stylesheet" type="text/css" href="signup.css">
+        </head>
+        <body>
+            <nav>
+                <div class="nav-items">
+                    <a href="landing.html">Back</a>
+                </div>
+            </nav>
+            <section class="hero">
+                <div class="hero-container">
+            <div class="column-left">
+            <h1 class="heading">Sign Up</h1>
+                <input type="text" class="form__input" id="name" placeholder="Full Name" required=""/>
+                <label for="name" class="form__label">Full Name</label>
+                <br>
+                <input type="email" class="form__input" id="name" placeholder="Email" required=""/>
+                <label for="name" class="form__label">Email</label>
+                <br>
+                <input type="password" class="form__input" id="name" placeholder="Password" required=""/>
+                <label for="name" class="form__label">Password</label>
+                <br>
+                <input type="password" class="form__input" id="name" placeholder="Confirm Password" required=""/>
+                <label for="name" class="form__label">Confirm Password</label>
+                <br>
+                <button>Sign Up</button>
+            </div> 
+            <div class="column-right"> 
+                <img src="images/yellowblob.png" class="hero-image">     
+                <h3>Or, if you already have an account</h3>
+                <button>Log In</button>
+            </div>
+            </div>
+            </section>
+        </body>
+    </html>
