updated login page

--- a/landing.html
+++ b/landing.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width", initial-scale="1.0">
         <title>Automated Attendance</title>
         <link rel="stylesheet" href="landing.css" />
+        <link rel="icon" type="image/png" href="images/autoattendlogo.png"/>
     </head>
     <body>
         <nav>
@@ -12,7 +13,7 @@
             <div class="nav-items">
                 <a href="/">About</a>
                 <a href="/">Credits</a>
-                <a href="/">Log In</a>
+                <a href="login.html">Log In</a>
                 <a href="signup.html">Sign Up</a>
             </div>
         </nav>
