--- a/signup.html
+++ b/signup.html
@@ -7,11 +7,12 @@
                 Sign Up
             </title>
             <link rel="stylesheet" type="text/css" href="signup.css">
+            <link rel="icon" type="image/png" href="images/autoattendlogo.png"/>
         </head>
         <body>
             <nav>
                 <div class="nav-items">
-                    <a href="landing.html">Back</a>
+                    <a href="landing.html">Home</a>
                 </div>
             </nav>
             <section class="hero">
@@ -35,7 +36,9 @@
             <div class="column-right"> 
                 <img src="images/yellowblob.png" class="hero-image">     
                 <h3>Or, if you already have an account</h3>
+                <a href="login.html">
                 <button>Log In</button>
+                </a>
             </div>
             </div>
             </section>
