--- a/add-student.html
+++ b/add-student.html
@@ -4,11 +4,17 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Add a Student</title>
-        <link rel="stylesheet" type="text/css" href="add-student.css"> 
+        <link rel="stylesheet" type="text/css" href="add-student.css">
+        <link rel="icon" type="image/png" href="images/autoattendlogo.png"/> 
     </head>
     <body>
-        <a href="new-class.html" class="cancel">Cancel <span class="save">Save</span></a>
-        <h1 class="heading">Add a <span style="color: #f21a4c;">Student</span></h1>
+        <nav>
+        <div class = "nav-items">
+        <a href="new-class.html">Cancel</a>
+        <a href="save.html">Save</a>
+     </div>
+    </nav>
+        <h1 class="heading">Add a Student</h1>
         <input type="text" class="searchDesign" id="searchBar" onkeyup="Search()" placeholder="Find a student"/>
         <img src="images/search-icon.png" alt="Search Icon" height="1%" width="1%" />
         <div class="box"></div>
