Reformat and style 'Select Class' page

--- a/web-pages/select_class.html
+++ b/web-pages/select_class.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome, ___!</title>
+    <link rel="stylesheet" href="./css/select-class.css/">
   </head>
   <body>
     <div id="sign-out">Sign Out</div>
