added more specific information

--- a/Student-Information.html
+++ b/Student-Information.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Students</title>
 	<meta charset="utf-8">
-	<link rel="stylesheet" href="studentinformation.css">
+	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -13,18 +13,27 @@
 			<img src="student1.jpg" alt="Student 1">
 			<h2>John Doe</h2>
 			<p>Grade: 10</p>
+			<p>Gender: Male</p>
+			<p>Parent Contact: 555-555-1212</p>
+			<p>Address: 123 Main Street</p>
 		</div>
 
 		<div class="student">
 			<img src="student2.jpg" alt="Student 2">
 			<h2>Jane Smith</h2>
 			<p>Grade: 9</p>
+			<p>Gender: Female</p>
+			<p>Parent Contact: 555-555-1212</p>
+			<p>Address: 456 Elm Street</p>
 		</div>
 
 		<div class="student">
 			<img src="student3.jpg" alt="Student 3">
 			<h2>Bob Johnson</h2>
 			<p>Grade: 11</p>
+			<p>Gender: Male</p>
+			<p>Parent Contact: 555-555-1212</p>
+			<p>Address: 789 Oak Street</p>
 		</div>
 
 	</div>
