updated color scheme and css for attendance report page

--- a/AttendanceReport.html
+++ b/AttendanceReport.html
@@ -30,17 +30,17 @@
       <tbody>
         <tr>
           <td>John Doe</td>
-          <td>Present</td>
+          <td class="present">Present</td>
           <td>01/01/2023</td>
         </tr>
         <tr>
           <td>Jane Smith</td>
-          <td>Absent</td>
+          <td class="absent">Absent</td>
           <td>01/01/2023</td>
         </tr>
         <tr>
           <td>Bob Johnson</td>
-          <td>Present</td>
+          <td class="present">Present</td>
           <td>01/01/2023</td>
         </tr>
       </tbody>
