4th student and works with all screen sizes

--- a/Student-Information.html
+++ b/Student-Information.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Students</title>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -34,6 +35,15 @@
 			<p>Gender: Male</p>
 			<p>Parent Contact: 555-555-1212</p>
 			<p>Address: 789 Oak Street</p>
+		</div>
+
+		<div class="student">
+			<img src="student4.jpg" alt="Student 4">
+			<h2>Amy Williams</h2>
+			<p>Grade: 10</p>
+			<p>Gender: Female</p>
+			<p>Parent Contact: 555-555-1212</p>
+			<p>Address: 321 Pine Street</p>
 		</div>
 
 	</div>
