--- a/Student-Information.html
+++ b/Student-Information.html
@@ -4,7 +4,7 @@
 	<title>Students</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="studentinformation.css">
 </head>
 <body>
 
