updated table, still a wip

--- a/dashboard.html
+++ b/dashboard.html
@@ -60,13 +60,13 @@
         <section id="content-right">
             <div class="table-box">
                 <table width="100%">
-                    <thead>
+                    <th>
                         <tr>
-                            <td><i class="fa-solid fa-left"></i></td>
-                            <td>Period 1</td> <!-- Current class period -->
-                            <td><i class="fa-solid fa-right"></i></td>
+                            <td class="heading">
+                                <h3>Period 1</h3>
+                            </td> <!-- Current class period -->
                         </tr>
-                    </thead>
+                    </th>
                     <tbody>
                         <tr>
                             <td class="status">
@@ -77,6 +77,32 @@
                                 <div class="student-de">
                                     <h5>Oliver Hankins</h5> <!-- student name goes here -->
                                     <p>243592</p> <!-- student id goes here -->
+                                </div>
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td class="status">
+                                <i class="fa-solid fa-circle"></i>
+                            </td>
+
+                            <td class="student-name">
+                                <div class="student-de">
+                                    <h5>Willie Clymie</h5> <!-- student name goes here -->
+                                    <p>246593</p> <!-- student id goes here -->
+                                </div>
+                            </td>
+                        </tr>
+
+                        <tr>
+                            <td class="status">
+                                <i class="fa-solid fa-circle"></i>
+                            </td>
+
+                            <td class="student-name">
+                                <div class="student-de">
+                                    <h5>Joshy-poo</h5> <!-- student name goes here -->
+                                    <p>269438</p> <!-- student id goes here -->
                                 </div>
                             </td>
                         </tr>
