finished right-content, still need to change class

--- a/dashboard.html
+++ b/dashboard.html
@@ -62,9 +62,7 @@
                 <table width="100%">
                     <th>
                         <tr>
-                            <td class="heading">
-                                <h3>Period 1</h3>
-                            </td> <!-- Current class period -->
+                            <h3>Period 1</h3><!-- Current class period -->
                         </tr>
                     </th>
                     <tbody>
