made the arrow longer and a softer color

--- a/classes.html
+++ b/classes.html
@@ -36,7 +36,7 @@
                         <span>Period 1</span>
                         <h3># students</h3>
                     </div>
-                    <i class="fa-solid fa-arrow-right"></i>
+                    <i class="fa-solid fa-arrow-right-long"></i>
                 </div>
                 </a>
             </div>
