--- a/classes.html
+++ b/classes.html
@@ -14,7 +14,7 @@
             <img src="images/projectlogo.png" class="logo">
             <div class="items">
                 <ul>
-                    <li><a href="/"><i class="fa-solid fa-house"></i> Dashboard</a></li>
+                    <li><a href="dashboard.html"><i class="fa-solid fa-house"></i> Dashboard</a></li>
                     <li><a href="/"><i class="fa-solid fa-folder"></i> Classes</a></li>
                     <li><a href="/"><i class="fa-solid fa-users"></i> New Class</a></li>
                     <li><a href="/"><i class="fa-solid fa-user-plus"></i> New Student</a></li>
@@ -39,6 +39,15 @@
                     <i class="fa-solid fa-arrow-right-long"></i>
                 </div>
                 </a>
+            </div>
+
+            <div class="create-buttons">
+                <div class="new-class-button">
+                    <div class="new-class-button-wrapper">
+                        <i class="fa-solid fa-plus"></i>
+                        New Class
+                    </div>
+                </div>
             </div>
         </section>
 
