--- a/dashboard.html
+++ b/dashboard.html
@@ -14,8 +14,8 @@
             <img src="images/projectlogo.png" class="logo">
             <div class="items">
                 <ul>
-                    <li><a href="/"><i class="fa-solid fa-house"></i> Dashboard</a></li>
-                    <li><a href="/"><i class="fa-solid fa-folder"></i> Classes</a></li>
+                    <li><a><i class="fa-solid fa-house"></i> Dashboard</a></li>
+                    <li><a href="classes.html"><i class="fa-solid fa-folder"></i> Classes</a></li>
                     <li><a href="/"><i class="fa-solid fa-users"></i> New Class</a></li>
                     <li><a href="/"><i class="fa-solid fa-user-plus"></i> New Student</a></li>
                     <li><a href="/"><i class="fa-solid fa-gear"></i> Settings</a></li>
