added new class and edit classes buttons

--- a/classes.html
+++ b/classes.html
@@ -48,6 +48,13 @@
                         New Class
                     </div>
                 </div>
+
+                <div class="edit-classes-button">
+                    <div class="edit-classes-button-wrapper">
+                        <i class="fa-solid fa-pen"></i>
+                        Edit Classes
+                    </div>
+                </div>
             </div>
         </section>
 
