--- a/classes.html
+++ b/classes.html
@@ -15,7 +15,7 @@
             <div class="items">
                 <ul>
                     <li><a href="dashboard.html"><i class="fa-solid fa-house"></i> Dashboard</a></li>
-                    <li><a href="/"><i class="fa-solid fa-folder"></i> Classes</a></li>
+                    <li><i class="fa-solid fa-folder"></i> Classes</li>
                     <li><a href="/"><i class="fa-solid fa-users"></i> New Class</a></li>
                     <li><a href="/"><i class="fa-solid fa-user-plus"></i> New Student</a></li>
                     <li><a href="/"><i class="fa-solid fa-gear"></i> Settings</a></li>
@@ -42,19 +42,23 @@
             </div>
 
             <div class="create-buttons">
-                <div class="new-class-button">
-                    <div class="new-class-button-wrapper">
-                        <i class="fa-solid fa-plus"></i>
-                        New Class
+                <a href="/">
+                    <div class="new-class-button">
+                        <div class="new-class-button-wrapper">
+                            <i class="fa-solid fa-plus"></i>
+                            New Class
+                        </div>
                     </div>
-                </div>
+                </a>
 
-                <div class="edit-classes-button">
-                    <div class="edit-classes-button-wrapper">
-                        <i class="fa-solid fa-pen"></i>
-                        Edit Classes
+                <a href="/">
+                    <div class="edit-classes-button">
+                        <div class="edit-classes-button-wrapper">
+                            <i class="fa-solid fa-pen"></i>
+                            Edit Classes
+                        </div>
                     </div>
-                </div>
+                </a>
             </div>
         </section>
 
