linked period card

--- a/classes.html
+++ b/classes.html
@@ -30,7 +30,7 @@
             </h1>
 
             <div class="class-periods">
-                <a href="/">
+                <a href="period-display.html">
                 <div class="class-boxes">
                     <div>
                         <span>Period 1</span>
