--- a/period-display.html
+++ b/period-display.html
@@ -56,9 +56,9 @@
                         </tr>
 
                         <tr>
-                            <td> <img src="images/profilepicturetemp.png" alt=""> LaQuesha D'Shawnte </td>
-                            <td> 243658 </td>
-                            <td> 12 </td>
+                            <td> <img src="images/childTantrum-168269757-770x553-1-650x428.jpeg" alt=""> Ayaan Cashapp </td>
+                            <td> 247865 </td>
+                            <td> K </td>
                             <td> <a href="/" class="table-link">Edit</a> </td>
                        </tr>
 
