added styling to camera page

--- a/camera.html
+++ b/camera.html
@@ -2,13 +2,7 @@
 <html>
   <head>
     <title>Camera Feed</title>
-    <style>
-      #video-box {
-        border: 1px solid black;
-        width: 640px;
-        height: 480px;
-      }
-    </style>
+    <link rel="stylesheet" type="text/css" href="camera.css">
   </head>
   <body>
     <h1>Camera Feed</h1>
