Base Template for Page Pop-Up For Attendance Report Print Or Email

--- a/releaseConcept.html
+++ b/releaseConcept.html
@@ -11,7 +11,7 @@
     <!-- The current implenetation I'm workin on his a feedback or overwrite page for the attendance system here Im just making the simple design later on I can theme it. -->
 
     <form action="/" class="decor">
-      <div class="form-inner">
+      <div class="form-inner-region">
 	<h1>Contact us</h1>
 	<input type="text" placeholder="User">
 	<input type="email" placeholder="Email Address">
