--- a/landing.html
+++ b/landing.html
@@ -9,27 +9,19 @@
     </head>
     <body>
         <nav>
-            <div class="logo"><img src="images/autoattendlogo.png" class="logo-image"></div>
+            <div class="logo"><img src="images/projectlogo.png" class="logo-image"></div>
             <div class="nav-items">
-                <a href="/">About</a>
-                <a href="/">Credits</a>
                 <a href="login.html">Log In</a>
                 <a href="signup.html">Sign Up</a>
             </div>
         </nav>
         <section class="hero">
             <div class="hero-container">
-                <div class="column-left">
-                    <h1>Automated Attendance</h1>
-                    <h3>Attendance made easy</h3>
-                    <p>An independent study project by a <br>group of students at Allen High School</p>
-                    <a href="signup.html">
-                    <button>Get Started</button>
-                    </a>
+                <div class="title">
+                    <h1>Streamline <span style="color: #8685ef">Attendance</span> Tracking With <span style="color: #8685ef">Facial Recognition</span> Technology</h1>
+                    <h3>Eliminate errors and improve efficiency with our cutting-edge facial recognition attendance system</h3>
                 </div>
-                <div class="column-right">
-                    <img src="images/yellowandtealblob.png" class="hero-image">
-                </div>
+                <a href="signup.html" class="get-started">Get Started</a>
             </div>
         </section>
     </body>
