Weekly update and progress with relevant resources to the reference guide

--- a/releaseReferences.html
+++ b/releaseReferences.html
@@ -25,23 +25,27 @@
 	<div class="card">
 	  <h2>Status Update and Current Progression</h2>
 	  <h5>Explains Progress to Release</h5>
-	  <p> Progress is proficient but is only about 2/3 through progression. I have researched and created framework for the attendance system implementation into front-end web pages, but require more progress to be done on database and flask before major progress can be made. Provide Issues in GitHub for further consultation on the release progression of the project. Reference sheet will be updated as needed to serve as guide and help fever stuck or certain team members are unavailable. Current Addressed Issues: Camera and HTML Integration with Python and Java support </p>
+	  <p> Progress is proficient but is only about 2/3 through progression. I have researched and created framework for the attendance system implementation into front-end web pages, but require more progress to be done on database and flask before major progress can be made. Provide Issues in GitHub for further consultation on the release progression of the project. Reference sheet will be updated as needed to serve as guide and help fever stuck or certain team members are unavailable. </p>
+<br>
+	  <p>(Update) Focus has now been put onto the website design and software integration with other aspects of the project as we shift off of the account system. Current Addressed Issues: SQL and Facial Recogniton implementation, programs compatiability. </p>
 	</div>
 	<div class="card">
 	  <h3>Task To Be Done</h3>
 <h5>List of Issues Needed to be Address Before Release</h5>
-	  <p> Cross integration between front-end and back-end is still in progress and still needs debugging. Not all front-end pages have been created nor has the CSS and HTML pages that have been created been validated. For my next area of focus in release I will polish up old pages and start integrating the fronted pages that require user view of back-end features. Need to design external camera access to database and facial recognition. Need to implement manual override of attendance in attendance system. </p>
+	  <p> Cross integration between front-end and back-end is still in progress and still needs debugging. Not all front-end pages have been created nor has the CSS and HTML pages that have been created been validated. For my next area of focus in release I will polish up old pages and start integrating the fronted pages that require user view of back-end features. Need to design external camera access to database and facial recognition. Need to implement manual override of attendance in attendance system.  </p>
+	  <br>
+	  <p>(Update) I plan on having a meeting with the group in order to get a clear agreement on what we want the release product to exactly look like. Due to each of us working on seperate aspects of the project, I think its hard for us to fully imagine what we all need that is realistic and could be done before the project is due. Will update with results and summary of meeting.</p>
 	  </div>
 	<div class="card">
 	<h2>Milestones</h2>
 	  <h5>Current Implemnetations for Release</h5>
-	<p> Database was created and flask was implemented into frontend. </p> 
+	<p> Database was created and flask was implemented into frontend. User interface and account system was created. </p> 
 	</div>
       </div>
       <div class="rightcolumn">
 	<div class="card">
 	  <h3>Project's Progress To Release</h3>
-	  <p> In Progress </p>
+	  <p> Website Integration Phase </p>
 	</div>
 	<div class="card">
 	  <h3>General Reference Links</h3>
@@ -53,16 +57,22 @@
 	  <h3>Current Issue Related Links</h3>
 	  <a href="https://towardsdatascience.com/video-streaming-in-web-browsers-with-opencv-flask-93a38846fe00"> Flask Camera HTML Integration</a>
 	  <a href="https://stackoverflow.com/questions/62255949/face-detection-using-webhtml-css-and-python"> Face Detection HTML</a>
+	  <a href"https://stackoverflow.com/questions/30237967/update-sql-db-columns-based-on-results-from-website"> SQL and Frontend Interaction</a>
+	  <a href="https://github.com/devronithomas/Facial-Recognition-integrated-with-SQL"> Example of Facial Recogniton Interacting With SQL</a>
 	</div> 
 	<div class="card">
 	  <h3>Wants For Release</h3>
 	  <p> Increased accuracy and precision in facial recognition </p>
 	    <p> admin overide frontend account different from teacher account </p>
-	    <p> more user-friendly features implemented into frontend. </p>
+	  <p> more user-friendly features implemented into frontend. </p>
+	  <p> account recovery system with account setup </p>
+	  <p> support and feedback frontend page </p>
 	</div>
 	<div class="card">
 	  <h3>Excluded from Release</h3>
 	  <p> TBD, nothing too pressing or difficult to remove. </p>
+	  <br>
+	  <p>(Update) Still TBD, but disscussion will be held soon on this topic. </p>
 	</div>
       </div>
     </div>
